@@ -1,3 +1,7 @@
+= master
+
+* Include cookie_options when clearing the cookie (#162, #163) (eiko, jeremyevans)
+
 = 3.17.0 (2019-02-15)
 
 * Improve performance in the common case for RodaResponse#finish (jeremyevans)
